// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals EngagementRecencyPreview Component renders correctly 1`] = `
<PageLink
  to="/signals/engagement/cohorts/ip-pool/best-pool?subaccount=101"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Engagement Recency"
        tooltipContent="
  The share over time of your email that has been sent to recipients who most recently
  opened messages or clicked links during several defined time periods.
"
      />
    </Panel.Section>
    <Panel.Section>
      <BarChart
        activeFill="#22838A"
        disableHover={true}
        fill="#B3ECEF"
        gap={0.5}
        height={170}
        margin={
          Object {
            "bottom": 12,
            "left": 12,
            "right": 0,
            "top": 12,
          }
        }
        timeSeries={
          Array [
            1,
            2,
            3,
          ]
        }
        width="99%"
        xAxisProps={
          Object {
            "hide": true,
          }
        }
        xAxisRefLines={Array []}
        xKey="date"
        yAxisProps={
          Object {
            "domain": Array [
              0,
              1,
            ],
            "tickFormatter": [Function],
            "ticks": Array [
              0,
              0.25,
              0.5,
              0.75,
              1,
            ],
          }
        }
        yAxisRefLines={Array []}
        yKey="value"
        yKeys={
          Array [
            Object {
              "description": "0-14 days since last engagement",
              "fill": "#1A838B",
              "key": "14d",
              "label": "Recently Engaged",
              "stroke": "#1A838B",
            },
            Object {
              "description": "14-90 days since last engagement",
              "fill": "#219EA8",
              "key": "90d",
              "label": "Semi Recently Engaged",
              "stroke": "#219EA8",
            },
            Object {
              "description": "90-365 days since last engagement",
              "fill": "#29B9C7",
              "key": "365d",
              "label": "Not Recently Engaged",
              "stroke": "#29B9C7",
            },
            Object {
              "description": "365+ days since last engagement",
              "fill": "#50CFDA",
              "key": "uneng",
              "label": "Never Engaged",
              "stroke": "#50CFDA",
            },
            Object {
              "description": "Never engaged, first email in last 7 days",
              "fill": "#88E2E7",
              "key": "new",
              "label": "New",
              "stroke": "#88E2E7",
            },
          ]
        }
        yRange={
          Array [
            "auto",
            "auto",
          ]
        }
      />
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals EngagementRecencyPreview Component renders empty correctly 1`] = `
<PageLink
  to="/signals/engagement/cohorts/ip-pool/best-pool?subaccount=101"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Engagement Recency"
        tooltipContent="
  The share over time of your email that has been sent to recipients who most recently
  opened messages or clicked links during several defined time periods.
"
      />
    </Panel.Section>
    <Panel.Section>
      <Callout
        height="170px"
        title="No Data Available"
      >
        Insufficient data to populate this chart
      </Callout>
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals EngagementRecencyPreview Component renders error correctly 1`] = `
<PageLink
  to="/signals/engagement/cohorts/ip-pool/best-pool?subaccount=101"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Engagement Recency"
        tooltipContent="
  The share over time of your email that has been sent to recipients who most recently
  opened messages or clicked links during several defined time periods.
"
      />
    </Panel.Section>
    <Panel.Section>
      <Callout
        height="170px"
        title="Unable to Load Data"
      >
        error message
      </Callout>
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals EngagementRecencyPreview Component renders loading correctly 1`] = `
<PanelLoading
  minHeight="170px"
/>
`;
